Remove JDK 7 PermGenSize setting
Build with Java 8 now